--- a/core/dashboard/templates/sidebar.html
+++ b/core/dashboard/templates/sidebar.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.css' %}">
         <link rel="stylesheet" href="{% static 'css/dataTables.css' %}">
+        <link rel="stylesheet" href="{% static 'css/jquery-confirm.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome/css/all.css' %}">
     </head>
 <body>
