Backend en POS View para confirmation y datatables .js

--- a/core/dashboard/templates/sidebar.html
+++ b/core/dashboard/templates/sidebar.html
@@ -68,7 +68,7 @@
           </li>
         </ul>
         <hr>
-        <a href="pendiente$ 'posView' %}" class="nav-link text-white">
+        <a href="{% url 'pos:index' %}" class="nav-link text-white">
           <span height="16" width="16" class="bi pe-none me-2"><i class="fas fa-shop"></i></span>
           Ingresar a POS
         </a>
