--- a/core/stock/templates/stock/index.html
+++ b/core/stock/templates/stock/index.html
@@ -5,6 +5,7 @@
 <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
 <script src="{% static 'js/dataTables1.js' %}"></script>
 <script src="{% static 'js/notify.min.js' %}"></script>
+<script src="{% static 'js/jquery-confirm.min.js' %}"></script>
 <div class="container align-content-center overflow-auto " style="margin:  5rem auto;">
     <h3 class="m-0">Inventario</h3>
     <small><a href="{% url 'stock:create' %}">Añadir producto</a></small>
