--- a/core/customers/templates/customers/index.html
+++ b/core/customers/templates/customers/index.html
@@ -3,6 +3,7 @@
 {% block body %}'
 {% load static %}
 <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
+<script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
 <script src="{% static 'js/dataTables1.js' %}"></script>
 <div class="container align-content-center overflow-auto " style="margin:  5rem auto;">
     <h3 class="m-0">Clientes</h3>
@@ -18,7 +19,7 @@
             {% for customer in customers %}
             <tr>
                 <td class=" d-flex justify-content-between">{{ customer.name }}<a href="{% url 'customers:edit' %}?id={{ customer.id }}">Editar</a></td>
-                <td>{{ customer.t_debt }}</td>
+                <td><span class="pricef">{{ customer.t_debt }}</span></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -32,5 +33,13 @@
 </div>
 <script>
     new DataTable('#productos');
+    $('.pricef').each(function() {
+        $(this).attr("data-price", $(this).text())
+        $(this).priceFormat({
+            allowNegative: true,
+            centsLimit: 0,
+            prefix: '$'
+        });
+    });
 </script>
 {% endblock %}
