--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -6,12 +6,14 @@
         <title>POS</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main2.css' %}">
         <link rel="stylesheet" href="{% static 'css/simple-line-icons.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.css' %}">
         <link rel="stylesheet" href="{% static 'css/dataTables.css' %}">
-        <link rel="stylesheet" href="{% static 'css/jquery-confirm.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome/css/all.css' %}">
+        <link rel="stylesheet" href="{% static 'css/jquery-confirm.min.css' %}">
         <style>
             .pointer {
                 cursor: pointer;
@@ -19,50 +21,57 @@
         </style>
     </head>
 <body>
+    <script>
+        var CSRF_TOKEN = '{{ csrf_token }}';
+    </script>
     <script src="{% static 'js/jquery-3.7.1.js' %}"></script>
     <script src="{% static 'js/dataTables1.js' %}"></script>
     <script src="{% static 'js/notify.min.js' %}"></script>
     <script src="{% static 'js/jquery-confirm.min.js' %}"></script>
+    <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
+    <div class="d-flex align-items-stretch border-danger border p-3" style="height: 100vh;">
+        <div class="p-2 border-danger border flex-fill">
+            <!-- Barra lateral izquierda -->
+            {% include 'pos/product_list.html' %}
+        </div>
+        <div class="d-flex flex-column border-danger border-bottom border-top" style="width: 500px;">
+            <!-- Barra lateral derecha -->
+            {% include 'pos/order_sumary.html' %}
+        </div>
+        <script src="{% static 'pos/utils/js/productForm.js' %}"></script>
+    </div>
     <script>
-        var CSRF_TOKEN = '{{ csrf_token }}';
+        new DataTable('#productos', {
+            initComplete: function() {
+                $('#productos_wrapper')
+                    .removeClass()
+                    .addClass('dt-container border p-3 dataTables_wrapper');
+            }
+        });
+        $(document).ready(function() {
+            $('#bar-code').on('keydown', function(event) {
+                if (event.keyCode === 13) {
+                    $('#bar-code').prop("disabled", true)
+                }
+            });
+        });
     </script>
-    <div>
-        <button id="test" class="btn btn-info">CLICK</button>
-        <div id="example"></div>
-        <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
-        <h1>1ro</h1>
-        <!-- VENDOR -->
-        <div class="input-group mb-3">
-            <h6 class=" navbar-text pe-3">Vendedor:</h6>
-            <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-truck-ramp-box"></span></label>
-            <select name="vendor" class="form-select" id="inputGroupSelect01" required>
-                <option selected>Seleccione...</option>
-                <option value=""></option>
-            </select>
-        </div>
-        <!-- PRODUCT -->
-        <div class="input-group mb-3">
-            <h6 class=" navbar-text pe-3">Producto:</h6>
-            <label class="input-group-text" for="inputGroupSelect01"><span class="fas fa-dice-d6"></span></label>
-            <select name="category" class="form-select" id="inputGroupSelect01" required>
-                <option selected>Seleccione...</option>
-                <option value="">1</option>
-            </select>
-        </div>
-        <!-- BAR CODE -->
-        <div class="input-group mb-3">
-            <h6 class=" navbar-text pe-3">Código de barras:</h6>
-            <span class="input-group-text"><span class="fas fa-barcode"></span></span>
-            <input name="bar_code" type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
-            <label class="btn btn-outline-secondary" for="bar-code">Editar</label>
-        </div>
-        <p>Excepciones: <br>
-            - No se encontro el producto con el codigo de barras <br>
-            - No selecciono producto/vendedor
-        </p>
-    </div>
-    <div class="border border-black">
-        <h1>2do</h1>
-    </div>
+    {% if messages %}
+    <script>
+      {% for message in messages %}
+        {% if message.tags == 'success' %}
+          $.notify("{{ message|escapejs }}", "success");
+        {% elif message.tags == 'info' %}
+          $.notify("{{ message|escapejs }}", "info");
+        {% elif message.tags == 'warning' %}
+          $.notify("{{ message|escapejs }}", "warn");
+        {% elif message.tags == 'error' %}
+          $.notify("{{ message|escapejs }}", "error");
+        {% else %}
+          $.notify("{{ message|escapejs }}", "info");
+        {% endif %}
+      {% endfor %}
+    </script>
+    {% endif %}
 </body>
 </html>
