Funcionalidad de dt con product card

--- a/core/pos/templates/pos/product_list.html
+++ b/core/pos/templates/pos/product_list.html
@@ -3,9 +3,9 @@
         cursor: pointer;
     }
 </style>
-<div class="overflow-auto p-1" style="height: 100%;">
+<div class="overflow-auto p-1" id="product_list" style="height: 100%;">
     <h3 class="m-0">Productos</h3>
-    <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
+    {% comment %} <table id="productos" class="display table table-striped table-bordered table-hover dataTable" style="width:100%;">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -32,5 +32,5 @@
                 <th>Inventario</th>
             </tr>
         </tfoot>
-    </table>
+    </table> {% endcomment %}
 </div>
