Corrección en precio de venta

--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -16,6 +16,12 @@
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dice-d6"></span></span>
             <input name="name" type="text" class="form-control" placeholder="Nombre de producto" required>
         </div>
+        <!-- SELL PRICE -->
+        <div class="input-group mb-3">
+            <h6 class=" navbar-text pe-3">Precio de producto:</h6>
+            <span class="input-group-text" id="basic-addon1"><span class="fas fa-dollar-sign"></span></span>
+            <input name="price" type="number" class="form-control" placeholder="Precio de venta de producto" step="any" required>
+        </div>
         <!-- CATEGORY -->
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Categoria:</h6>
