--- a/core/products/templates/products/create.html
+++ b/core/products/templates/products/create.html
@@ -17,10 +17,16 @@
             <input name="name" type="text" class="form-control" placeholder="Nombre de producto" required>
         </div>
         <!-- SELL PRICE -->
+        <small><i>*Nota: El precio del producto NO debe de incluir el IVA al estar activo, el sistema cálcula automáticamente el IVA sobre el PRECIO del producto.</i></small>
         <div class="input-group mb-3">
             <h6 class=" navbar-text pe-3">Precio de producto:</h6>
             <span class="input-group-text" id="basic-addon1"><span class="fas fa-dollar-sign"></span></span>
             <input name="price" type="number" class="form-control" placeholder="Precio de venta de producto" step="any" required>
+            <!-- IVA -->
+            <div class="form-check form-switch m-2">
+                <input class="form-check-input" type="checkbox" name="iva" id="flexSwitchCheckChecked" checked>
+                <label class="form-check-label" for="flexSwitchCheckChecked">IVA</label>
+            </div>
         </div>
         <!-- CATEGORY -->
         <div class="input-group mb-3">
