Función de botón Ingresar código en POS.

--- a/core/pos/templates/pos/index.html
+++ b/core/pos/templates/pos/index.html
@@ -28,6 +28,7 @@
     <script src="{% static 'js/dataTables1.js' %}"></script>
     <script src="{% static 'js/notify.min.js' %}"></script>
     <script src="{% static 'js/jquery-confirm.min.js' %}"></script>
+    <script src="{% static 'js/jquery.priceformat.min.js' %}"></script>
     <script src="{% static 'pos/utils/js/orderReception.js' %}"></script>
     <div class="d-flex align-items-stretch border-danger border p-3" style="height: 100vh;">
         <div class="p-2 border-danger border flex-fill">
