Agregada funcionalidad para añadir producto con el código de barras, al resumen de venta.

--- a/core/pos/templates/pos/order_sumary.html
+++ b/core/pos/templates/pos/order_sumary.html
@@ -68,7 +68,7 @@
         <div class="input-group mb-3" id="inputBarCode" style="display: none;">
             <span class="input-group-text"><span class="fas fa-barcode"></span></span>
             <input type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
-            <label class="btn btn-outline-secondary" for="bar-code">Agregar</label>
+            <label class="btn btn-outline-secondary" id="submitBC" for="bar-code">Agregar</label>
         </div>
         <!-- Guardar en borrador -->
         <button class="btn btn-outline-primary w-100" type="button" disabled>Guardar en borrador</button>
