Rediseñado product card, y añadida función de borrar producto de el resumen de venta.

--- a/core/pos/templates/pos/order_sumary.html
+++ b/core/pos/templates/pos/order_sumary.html
@@ -67,11 +67,11 @@
         <!-- Código de barras -->
         <div class="input-group mb-3" id="inputBarCode" style="display: none;">
             <span class="input-group-text"><span class="fas fa-barcode"></span></span>
-            <input type="text" class="form-control" id="bar-code" placeholder="Código de barras" aria-label="Código de barras">
+            <input type="text" class="form-control" id="bar-code" placeholder="Seleccione para ingresar código de barras" aria-label="Código de barras">
             <label class="btn btn-outline-secondary" id="submitBC" for="bar-code">Agregar</label>
         </div>
         <!-- Guardar en borrador -->
-        <button class="btn btn-outline-primary w-100" type="button" disabled>Guardar en borrador</button>
+        <button class="btn btn-outline-primary w-100" id="btnDraft" type="button" disabled>Guardar en borrador</button>
     </div>
     <!-- Barra inferior - inferior -->
     <div class="border-top" style="height: 30%;">
